category update, list

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -9,7 +9,8 @@ category.name.exists=This category already exists
 category.name.invalid=Invalid category name
 category.save.success=Category saved successfully
 category.select.prompt=Select a category
-
+category.not.exists=Category doesn't exists
+category.update.success=Category updated successfully
 
 #===================
 # Product
