save and view contact us message

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -13,16 +13,14 @@ category.not.exists=Category doesn't exists
 category.update.success=Category updated successfully
 
 #===================
-# Product
+# Contact
 #===================
-product.all=All Products
-product.new=Add New Product
-product.name=Please provide a product name
-product.name.exists=This product already exists. Please choose a different name
-product.list.empty=No product found
-product.save.success=Product saved successfully
-product.edit=Edit Product
-product.update.success=Product updated successfully
+contact.all=All Messages
+contact.name.invalid=Please provide a valid name
+contact.email.invalid=Please provide a valid email
+contact.subject.invalid=Please select a subject
+contact.list.empty=No product found
+contact.save.success=Message sent successfully
 
 #===================
 # Income
