view contact message

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -21,7 +21,7 @@ contact.email.invalid=Please provide a valid email
 contact.subject.invalid=Please select a subject
 contact.list.empty=No product found
 contact.save.success=Message sent successfully
-
+contact.read=Read Message
 #===================
 # Income
 #===================
