--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,6 +1,8 @@
 #application title
 app.title=Buddhi Bal Thapa :: 
-#categories
+#==========================
+# Category
+#==========================
 category.new=Add New Category
 category.name=Category Name
 category.show=Category List
@@ -23,20 +25,21 @@ contact.list.empty=No product found
 contact.save.success=Message sent successfully
 contact.read=Read Message
 #===================
-# Income
+# Blog
 #===================
-income.all=All Incomes
-income.new=Add New Income
-income.user.name=Please provide a user name
-income.list.empty=No income source found
-income.save.success=Income saved successfully
-income.edit=Edit Income
-income.update.success=Income source updated successfully
-income.select.prompt=Select user
+blog.save.success=Blog saved successfully
+blog.all=All blogs
+blog.new=Add New blog
+blog.user.name=Please provide a user name
+blog.list.empty=No blog source found
+blog.save.success=blog saved successfully
+blog.edit=Edit blog
+blog.update.success=blog source updated successfully
+blog.select.prompt=Select user
 month.select.prompt=Select month
-income.amount=Provide an amount received
-income.invalid.name=Please provide a valid name
-
+blog.amount=Provide an amount received
+blog.invalid.name=Please provide a valid name
+blog.most.popular=Most popular
 #===================
 # Expense
 #===================
