read blog with share buttons

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -40,6 +40,7 @@ month.select.prompt=Select month
 blog.amount=Provide an amount received
 blog.invalid.name=Please provide a valid name
 blog.most.popular=Most popular
+blog.not.found=OOps! Requested blog was not found.
 #===================
 # Expense
 #===================
