--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -28,19 +28,20 @@ contact.read=Read Message
 # Blog
 #===================
 blog.save.success=Blog saved successfully
-blog.all=All blogs
-blog.new=Add New blog
+blog.all=All Blogs
+blog.new=Add New Blog
 blog.user.name=Please provide a user name
-blog.list.empty=No blog source found
-blog.save.success=blog saved successfully
-blog.edit=Edit blog
-blog.update.success=blog source updated successfully
+blog.list.empty=No Blog source found
+blog.save.success=Blog saved successfully
+blog.edit=Edit Blog
+blog.update.success=Blog updated successfully
 blog.select.prompt=Select user
 month.select.prompt=Select month
 blog.amount=Provide an amount received
 blog.invalid.name=Please provide a valid name
 blog.most.popular=Most popular
-blog.not.found=OOps! Requested blog was not found.
+blog.not.found=OOps! Requested Blog was not found.
+blog.delete.success=Blog deleted successfully
 #===================
 # Expense
 #===================
