create basic registration

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -43,12 +43,18 @@ blog.most.popular=Most popular
 blog.not.found=OOps! Requested Blog was not found.
 blog.delete.success=Blog deleted successfully
 #===================
-# Expense
+# Login/Registration
 #===================
-expense.all=All Expenses
+#login
+login.invalid=Invalid Username or Password
+logout.success=You have been logged out successfully
+
+email.invalid=Please provide a valid email address
+register.success=Registration Completed Successfully!
+account.exists=This account already exists
+
 expense.new=Add New Expense
 expense.user.name=Please provide a user name
-expense.save.success=Expense saved successfully
 expense.edit=Edit Expense
 expense.update.success=Expense updated successfully
 item.select.prompt=Select Product
@@ -67,7 +73,3 @@ user.login=Log In
 user.exists.registration=This email is already registered
 user.validate.success=Thank you for validating your email. Please login to access your account
 token.invalid=This token is NOT valid
-
-#login
-login.invalid=Invalid Username or Password
-logout.success=You have been logged out successfully
