login logout success

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -52,7 +52,7 @@ logout.success=You have been logged out successfully
 email.invalid=Please provide a valid email address
 register.success=Registration Completed Successfully!
 account.exists=This account already exists
-
+activation.link.sent=Activation link has been sent to your email. Please verify to login!
 expense.new=Add New Expense
 expense.user.name=Please provide a user name
 expense.edit=Edit Expense
