--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -4,6 +4,7 @@ app.title=Buddhi Bal Thapa ::
 # Category
 #==========================
 category.new=Add New Category
+category.all=View Categories
 category.name=Category Name
 category.show=Category List
 category.edit=Edit Category
