verify registered email

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -49,12 +49,15 @@ blog.delete.success=Blog deleted successfully
 #login
 login.invalid=Invalid Username or Password
 logout.success=You have been logged out successfully
-
 email.invalid=Please provide a valid email address
 register.success=Registration Completed Successfully!
 account.exists=This account already exists
 activation.link.sent=Activation link has been sent to your email. Please verify to login!
-expense.new=Add New Expense
+link.expired=This activation link has expired or User doesn't exist. Resend activation link
+account.already.activated=This account is already activated. Please login
+resend.activation.link=This link has expired, resend activation link
+
+account.activated.success=Account activated successfully.
 expense.user.name=Please provide a user name
 expense.edit=Edit Expense
 expense.update.success=Expense updated successfully
