show recent posted blogs

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -41,6 +41,7 @@ month.select.prompt=Select month
 blog.amount=Provide an amount received
 blog.invalid.name=Please provide a valid name
 blog.most.popular=Most popular
+blog.recent=Latest Blogs
 blog.not.found=OOps! Requested Blog was not found.
 blog.delete.success=Blog deleted successfully
 #===================
