list blogs in home page, redesign home page

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -44,6 +44,8 @@ blog.most.popular=Most popular
 blog.recent=Latest Blogs
 blog.not.found=OOps! Requested Blog was not found.
 blog.delete.success=Blog deleted successfully
+blog.subscription=Subscribe for newsletter
+blog.view.more=View more...
 #===================
 # Login/Registration
 #===================
